2010-10-08  Robert Larice
 * src/frontend/spiceif.c :
    remove a redundant cast

2010-10-08  Robert Larice
 * src/frontend/spiceif.c ,
 * src/spicelib/analysis/ckt.h :
    fix an incorrect prototype

2010-10-08  Robert Larice
 * src/include/inpptree.h ,
 * src/spicelib/parser/inpptree.c :
    fix a compiler warning,  void* versus void(*)(void)

2010-10-07  Holger Vogt
 * subckt.c: b. in i(b.xxx.byyy)

2010-10-05 Dietmar Warning
 * configure.ac: enabling openMP under SunStudio compiler
 * terminal.c, ivars.c, ifnewuid.c, inperror.c, main.c:
   asprintf definition also for sun compiler - can not be concentrated in
   ngspice.h because of libgen - libiberty conflict

============================ Rework-22 ==================================
2010-10-04  Holger Vogt
 * miscoms.c: remove bug no. 3080398

2010-10-02  Holger Vogt
 * mesadefs.h, mesamsak.c, mesamparam.c, mesasetup.c
   jfetmask.c: remove NAN or exp -312 outputs

2010-10-01  Robert Larice
 * src/spicelib/devices/hfet1/hfetmask.c ,
 * src/spicelib/devices/hfet2/hfet2mask.c ,
 * src/spicelib/devices/mes/mesmask.c ,
 * src/spicelib/devices/mesa/mesamask.c :
    bugfix, missing return(OK) in some switch statements

2010-09-30  Robert Larice
 * configure.ac ,
 * src/include/defines.h :
    use autoconf to find a suitable signal function type

2010-09-30  Robert Larice
 * src/xspice/icm/Makefile :
    use $(MAKE) instead of `make'

2010-09-30  Robert Larice
 * src/xspice/cmpp/Makefile.am ,
 * src/xspice/cmpp/ifs_lex.l ,
 * src/xspice/cmpp/mod_lex.l :
    always use flex instead of an arbitrary lex,
    use flex specific %options, to clean up the Makefile
    don't write the lexer via stdout, to improve gcc warning readability
    this works around a bug as well, which caused erronous lexer c files
    to be included in the distribution tar ball

2010-09-26  Holger Vogt
 * .cvsignore: m4 entry removed

2010-09-25  Holger Vogt
 * conf.c, conf.h, ngspice.h, visualc/config.h, configure.ac: