@@ -1257,7 +1257,7 @@ if_getstat(CKTcircuit *ckt, char *name)
                 break;
         if (i == ft_sim->analyses[which]->numParms)
             return (NULL);
-        if ((*(ft_sim->askAnalysisQuest))(ckt, ft_curckt->ci_curTask,
+        if ((*(ft_sim->askAnalysisQuest))(ckt, &(((TSKtask*)ft_curckt->ci_curTask)->taskOptions),
                 ft_sim->analyses[which]->analysisParms[i].id, &parm, 
                 (IFvalue *)NULL) == -1) {
             fprintf(cp_err, 
@@ -1271,7 +1271,7 @@ if_getstat(CKTcircuit *ckt, char *name)
             if(!(ft_sim->analyses[which]->analysisParms[i].dataType&IF_ASK)) {
                 continue;
             }
-            if ((*(ft_sim->askAnalysisQuest))(ckt, ft_curckt->ci_curTask, 
+            if ((*(ft_sim->askAnalysisQuest))(ckt, &(((TSKtask*)ft_curckt->ci_curTask)->taskOptions), 
                     ft_sim->analyses[which]->analysisParms[i].id, 
                     &parm, (IFvalue *)NULL) == -1) {
                 fprintf(cp_err, 
@@ -1503,7 +1503,7 @@ do {\
     	_foo(lname,TRANan,1);
     }
     ((TSKtask *)ft_curckt->ci_curTask)->jobs->JOBname = NULL;
-    ckt->CKTcurJob = ((TSKtask *)ft_curckt->ci_curTask)->jobs;
+    ckt->CKTcurJob = (&(((TSKtask *)ft_curckt->ci_curTask)->taskOptions))->jobs;
     
     _foo(((TSKtask *)ft_curckt->ci_curTask)->jobs->JOBname,char,-1);
 
